# analysis

./: .gitignore  Makefile  config.yaml.example  jupyter_notebook_config.py  pyproject.toml  shell.nix
src/: main.py
src/notebooks/: meta.ipynb  scrape.ipynb
src/notebooks/.ipynb_checkpoints/: meta-checkpoint.ipynb
src/tft/: api.py  config.py  data.py
